小表述修改

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
     <!-- 课程表区域 -->
     <div class="schedule-section">
-        <div class="section-title">📅 利爪的本周日程和课程</div>
+        <div class="section-title">📅 利爪的本周日程</div>
         <div class="courses-container" id="coursesContainer">
             <div class="no-courses">正在加载中~别急...</div>
         </div>
