--- a/index.html
+++ b/index.html
@@ -445,11 +445,11 @@
             const minutes = totalMinutes % 60;
 
             if (hours > 0 && minutes > 0) {
-                return `${hours}小时${minutes}分钟`;
+                return `${hours}小时${minutes}分钟后开始`;
             } else if (hours > 0) {
-                return `${hours}小时`;
+                return `${hours}小时后开始`;
             } else {
-                return `0小时${minutes}分钟`;
+                return `0小时${minutes}分钟后开始`;
             }
         }
 
